@@ -1,3 +1,6 @@
+2011-04-23  Kostas Nakos  <knakos@gmail.com>
+* android/*: Speed up fileselector on orientation update & bugfix mount/insert
+
 2011-04-22  Tomasz Krasuski <kr0tki@poczta.onet.pl>
 * src/sdl/input.c: Allow using SDL/LPT joysticks together with keyboard
   joysticks. Previously if a user had a joystick connected, keyboard
